[tool.poetry]
name = "behaviour-planning-smt"
version = "0.1.0"
description = "Behaviour planning over Domain Models using SMT solvers"
authors = ["MFaisalZaki <mustafa.faisal.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
up-fast-downward = "^0.4.1"
up-pyperplan = "^1.1.0"
up-symk = "^1.3.0"
unified-planning = "^1.1.0"
z3-solver = "^4.13.0.0"
lark = "^1.1.9"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
